<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.cat.eosinfo.viewmodel.TransactionViewModel"/>
    </data>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:visibility="@{viewModel.getFullInfoVisibility()}">

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_time"
                    app:textViewLiveData="@{viewModel.getTransactionTime()}"
                    android:layout_marginBottom="5dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_from"
                    app:textViewLiveData="@{viewModel.getTransactionFrom()}"
                    android:layout_marginBottom="5dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_to"
                    app:textViewLiveData="@{viewModel.getTransactionTo()}"
                    android:layout_marginBottom="5dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_amount"
                    app:textViewLiveData="@{viewModel.getTransactionAmount()}"
                    android:layout_marginBottom="5dp"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_single"
                app:textViewLiveData="@{viewModel.getTrxStr()}"
                android:visibility="@{viewModel.getTrxStrVisibility()}"
                android:layout_marginBottom="5dp"/>
    </androidx.cardview.widget.CardView>

</layout>
